--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,22 +7,36 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "moe.moz.pickpicture"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 5
+        versionName "1.0.4-release"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField ("String", "BUILD_TIME", getDate())
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled true
             zipAlignEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
+    }
+
+    signingConfigs {
+        debug {
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+        release {
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
     }
 }
 
@@ -40,6 +54,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation files('libs/mysql-connector-java-5.1.46-bin.jar')
 }
+
 repositories {
     mavenCentral()
+}
+
+String getDate() {
+    Date date = new Date();
+    return "\"" + date.format("yyyy-MM-dd HH:mm") + "\"";
 }
